--- a/src/css/page.css
+++ b/src/css/page.css
@@ -238,66 +238,82 @@
 
 .mark-bg-blue{position: relative; border-bottom: 20px solid var(--color--blue); display: block;}
 .mark-bg-blue::before{ height: 20px; width:80%; background-color:var(--color--blue); top:50%; left:0; z-index:0; display:block; content:''; position: absolute; z-index: -1;}
-.visionArea { color: var(--color--white);}
-.visionArea > *:not(:last-child, h3){ margin-bottom: 150px;}
-.visionArea > img{  display:block; width:100%;}
-.visionArea  h3 { font-size: 34px; font-weight: 600;}
-.visionArea > h3{ margin-bottom: 70px;}
-.visionArea > ol { display:flex; justify-content:space-between; width:100%; gap:2.08%; counter-reset: listNumber;}
-.visionArea > ol > li{ width:31.67%; aspect-ratio:1/1; padding-top:35px; border-radius:20px; counter-increment: listNumber; background-color:var(--color--blodGray); display:flex; flex-direction:columns; align-items:flex-start; justify-content:center; flex-wrap:wrap; }
-.visionArea > ol > li > p { width:100%; font-size:18px; line-height:30px; text-align:center; padding-bottom:28px; border-bottom:solid 1px var(--color--gray);}
-.visionArea > ol > li > p::before{ content: '0'counter(listNumber); display: block;}
-.visionArea > ol > li > div{ display:flex; align-items:center; justify-content:center;}
-.visionArea > div:nth-of-type(1){ width:100%; display:flex; align-items:center; justify-content:space-between;}
-.visionArea > div:nth-of-type(1) > img { width: 50%;}
-.visionArea > div:nth-of-type(1) > div { width:44%; font-size:34px;  display:flex; flex-direction:column; justify-content:center; font-weight:600; }
-.visionArea > div:nth-of-type(1) > div > p {line-height: 45px; position: relative; z-index:0;} 
-.visionArea > div:nth-of-type(1) > div > p:nth-child(1){margin-bottom: 50px;}
-.visionArea > div:nth-of-type(2) {width: 100%;}
-.visionArea > div:not(:nth-of-type(1)) > h3 { margin-bottom: 40px;position: relative; z-index: 1;}
-.visionArea > div:not(:nth-of-type(1)) > p {color: var(--color--blue); margin-bottom: 70px;}
-.visionArea > div:not(:nth-of-type(1)) > p::before { width: 14px; height:14px; margin-right:2px; display:inline-block; background-color:var(--color--blue);  content:''; border-radius:100%;}
-.visionArea > div:not(:nth-of-type(1)) > ol {counter-reset: listNumber; width:100%; border-top:2px solid var(--color--gray); border-bottom:2px solid  var(--color--gray);}
-.visionArea > div:not(:nth-of-type(1)) > ol > li {width: 100%; height:107px; gap:15.42%; counter-increment: listNumber; display:flex; align-items:center;}
-.visionArea > div:not(:nth-of-type(1)) > ol > li:not(:last-of-type){border-bottom: solid 1px var(--color--gray);}
-.visionArea > div:not(:nth-of-type(1)) > ol > li > div{width:33%; display:flex; align-items:center;}
-.visionArea > div:not(:nth-of-type(1)) > ol > li > div::before{content:'0'counter(listNumber); font-size:34px;  margin-right:8px; color:var(--color--gray); font-weight:900;}
-.visionArea > div:not(:nth-of-type(1)) > ol > li > div > mark {margin-right: 14px; line-height: 40px;}
-.visionArea > div:not(:nth-of-type(1)) > ol > li > div > strong {font-size: 20px; color: var(--color--blue);}
-.visionArea > div:not(:nth-of-type(1)) > ol > li > p { font-weight:300; line-height:25px; position:relative;}
-.visionArea > div:not(:nth-of-type(1)) > ol > li > p::before{top:0; left:-7px; position:absolute; content:'-';}
-.visionArea > div:not(:nth-of-type(1)) > ol > li > p > b{font-weight:600;}
+.visionArea { color: var(--color--white);
+  > *:not(:last-child, h3){ margin-bottom: 150px;}
+  > img{  display:block; width:100%;}
+  h3 { font-size: 34px; font-weight: 600;}
+  > h3{ margin-bottom: 70px;}
+  > ol { display:flex; justify-content:space-between; width:100%; gap:2.08%; counter-reset: listNumber; 
+    > li{ width:31.67%; aspect-ratio:1/1; padding-top:35px; border-radius:20px; counter-increment: listNumber; background-color:var(--color--blodGray); display:flex; flex-direction:columns; align-items:flex-start; justify-content:center; flex-wrap:wrap; 
+       > p { width:100%; font-size:18px; line-height:30px; text-align:center; padding-bottom:28px; border-bottom:solid 1px var(--color--gray);}
+       > p::before{ content: '0'counter(listNumber); display: block;}
+       > div{ display:flex; align-items:center; justify-content:center;}
+    }
+  }
+  > div:nth-of-type(1){ width:100%; display:flex; align-items:center; justify-content:space-between;
+     > img { width: 50%;}
+     > div { width:44%; font-size:34px;  display:flex; flex-direction:column; justify-content:center; font-weight:600; 
+      > p {line-height: 45px; position: relative; z-index:0;} 
+      > p:nth-child(1){margin-bottom: 50px;}
+    }
+  }
+  > div:nth-of-type(2) {width: 100%;}
+  > div:not(:nth-of-type(1)){
+    > h3 { margin-bottom: 40px;position: relative; z-index: 1;}
+    > p {color: var(--color--blue); margin-bottom: 70px;}
+    > p::before { width: 14px; height:14px; margin-right:2px; display:inline-block; background-color:var(--color--blue);  content:''; border-radius:100%;}
+    > ol {counter-reset: listNumber; width:100%; border-top:2px solid var(--color--gray); border-bottom:2px solid  var(--color--gray);
+       > li {width: 100%; height:107px; gap:15.42%; counter-increment: listNumber; display:flex; align-items:center;
+        &:not(:last-of-type){border-bottom: solid 1px var(--color--gray);}
+        > div{width:33%; display:flex; align-items:center;
+          &::before{content:'0'counter(listNumber); font-size:34px;  margin-right:8px; color:var(--color--gray); font-weight:900;}
+          > mark {margin-right: 14px; line-height: 40px;}
+          > strong {font-size: 20px; color: var(--color--blue);}
+        }
+        > p { font-weight:300; line-height:25px; position:relative;
+          &::before{top:0; left:-7px; position:absolute; content:'-';}
+          > b{font-weight:600;}
+        }
+      }
+    }
+} 
+}
 
 /* Organization */
 
 
-.organizationArea > mark.bg-color-blue {  line-height:33px; margin-bottom:35px;}
-.organizationArea > h3 { font-size:34px; margin-bottom:50px;}
-.organizationArea > ul { font-size: 20px; width:100%; gap:25px; margin-bottom:145px; display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;}
-.organizationArea > ul > li{flex-grow: 1;   padding-inline: 35px; padding-block: 33px; border-radius:30px; border:1px solid var(--color--white); align-items: center;display:flex;background: rgb(13,14,15);background: radial-gradient(circle, rgba(13,14,15,1) 48%, rgba(26,29,30,1) 77%);}
-.organizationArea > ul > li > strong { margin-right:60px; color:var(--color--blue);}
-.organizationArea > ul > li > p { line-height:25px; }
-.organizationArea > ul > li:last-of-type{align-items: flex-start;}
-.organizationArea > p { width: 100%; font-size:18px; font-weight:300; line-height:25px;}
-.organizationArea > p span{padding-top: 50px;  display: block;  color: var(--color--gray);}
-.organizationArea > p:nth-of-type(1){margin-bottom: 70px;}
+.organizationArea {
+  > mark.bg-color-blue {  line-height:33px; margin-bottom:35px;}
+  > h3 { font-size:34px; margin-bottom:50px;}
+  > ul { font-size: 20px; width:100%; gap:25px; margin-bottom:145px; display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;
+    > li{flex-grow: 1;   padding-inline: 35px; padding-block: 33px; border-radius:30px; border:1px solid var(--color--white); align-items: center;display:flex;background: rgb(13,14,15);background: radial-gradient(circle, rgba(13,14,15,1) 48%, rgba(26,29,30,1) 77%);
+       > strong { margin-right:60px; color:var(--color--blue);}
+       > p { line-height:25px; }
+       &:last-of-type{align-items: flex-start;}
+    }
+  }
+  > p { width: 100%; font-size:18px; font-weight:300; line-height:25px;
+    > span{padding-top: 50px;  display: block;  color: var(--color--gray);}
+    &:nth-of-type(1){margin-bottom: 70px;}
+  }
+} 
  
 
 /* Emblem */
 
-.emblemArea {color: var(--color--white);}
-.emblemArea  {width: 100%;}
-.emblemArea > figure{ width:100%; display:flex; justify-content:space-between; align-items:flex-start; flex-wrap: wrap }
-.emblemArea > figure > figcaption {width: 47.25%}
-.emblemArea > figure > figcaption > mark.bg-color-blue {  padding-block:7.5px; margin-bottom:36px;}
-.emblemArea > figure > figcaption > h3 { font-size:34px; font-weight:600; margin-bottom:50px;}
-.emblemArea > figure > figcaption > p { font-size:18px;  font-weight:400;  line-height:33px;  margin-bottom:50px;}
-.emblemArea > figure > figcaption > p > span{ display: block; margin-bottom: 28px;}
-.emblemArea > figure > figcaption > div { width: 100%;display: flex; gap: 20px;}
-.emblemArea > figure:not(:last-of-type){margin-bottom: 150px;}
-.emblemArea > figure > img{width: 47.25% ;}
-.emblemArea button { padding-inline:20px 50px; line-height:54px; font-size:18px; box-sizing:border-box; border:1px solid white; border-radius:10px; position:relative; cursor: pointer;}
-.emblemArea button::after {width:18px; height:16px; right: 2.5%; top:50%; transform:translate(-50% , -50%); background-image:url('../../public/images/club/downloadicon01.png'); content:''; position:absolute; display:inline;}
+.emblemArea {color: var(--color--white); width: 100%;
+  > figure { width:100%; display:flex; justify-content:space-between; align-items:flex-start; flex-wrap: wrap }
+  > figure > figcaption {width: 47.25%}
+  > figure > figcaption > mark.bg-color-blue {  padding-block:7.5px; margin-bottom:36px;}
+  > figure > figcaption > h3 { font-size:34px; font-weight:600; margin-bottom:50px;}
+  > figure > figcaption > p { font-size:18px;  font-weight:400;  line-height:33px;  margin-bottom:50px;}
+  > figure > figcaption > p > span{ display: block; margin-bottom: 28px;}
+  > figure > figcaption > div { width: 100%;display: flex; gap: 20px;}
+  > figure:not(:last-of-type){margin-bottom: 150px;}
+  > figure > img{width: 47.25% ;}
+  button { padding-inline:20px 50px; line-height:54px; font-size:18px; box-sizing:border-box; border:1px solid white; border-radius:10px; position:relative; cursor: pointer;}
+  button::after {width:18px; height:16px; right: 2.5%; top:50%; transform:translate(-50% , -50%); background-image:url('../../public/images/club/downloadicon01.png'); content:''; position:absolute; display:inline;}
+}
 
 
 /* History */
