--- a/src/css/page.css
+++ b/src/css/page.css
@@ -751,8 +751,8 @@
       }
     > ul {margin-left: auto; margin-right: 35px; width: 110px; line-height: 30px; height: 30px; position: relative; overflow: hidden; text-align: center; cursor: pointer;
       &:hover{overflow: unset;}      
-      > div:nth-of-type(1):after{content: url(../../public/images/matchCenter/▼-1.png);display: inline-block; margin-left: 20px; position: absolute;}
-      > div:nth-of-type(2){
+      > li:after{content: url(../../public/images/matchCenter/▼-1.png);display: inline-block; margin-left: 20px; position: absolute;}
+      > ol{
         > li:hover{color: var(--color--blue);}
       } 
     }
