--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -50,13 +50,7 @@ button {
 
 /* 폰트 CDN */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@font-face {
-  font-family: "SUIT-Regular";
-  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2")
-  format("woff2");
-  font-weight: normal;
-  font-style: normal;
-}
+@font-face {font-family: "SUIT-Regular";src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2")format("woff2");font-weight: normal;font-style: normal;}
 
 div[class$="page"]{width: 100%;}
 
