--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,16 +1,15 @@
 
 
 /* mainSlide */
-.mainPage .mainSlide-container { width: 100%; padding-top: 130px; margin-bottom: 330px; position: relative; 
-        .slick-prev:before, .slick-next:before { display: none; } 
-        .slick-arrow { z-index: -1; left: 1%; } 
-         button { bottom: -105px; width: 16px; height: 18px; position: absolute; background-size: cover; background-repeat: no-repeat; background-position: center; cursor: pointer; } 
-        .btn-prev { right: 14.14%; background-image: url('../../public/images/main/bannerprev.png'); } 
-        .btn-next { right: 12.12%; background-image: url('../../public/images/main/bannernext.png'); } 
+.mainPage .mainSlide-container { width: 100%; padding-top: 130px; margin-bottom: 330px; position: relative;
+      .btnBox{  position: absolute; bottom: -100px; display: flex; padding-left: 80%; gap: 20px; align-items: center;
+        button { width: 16px; height: 18px;background-size: cover; background-repeat: no-repeat; background-position: center; cursor: pointer; } 
+          .btn-prev { background-image: url('../../public/images/main/bannerprev.png'); } 
+          .btn-next { background-image: url('../../public/images/main/bannernext.png'); } 
+      }
         .slick-dots { width: 100%; bottom: -85px; text-align: center; height: 15px; 
           > li { position: relative; margin: 0; width: 50px; height: 3px; background-color: var(--color--white); 
             &.slick-active { background-color: #0061c6; } 
-            > button { display: none; } 
             &:nth-of-type(1)::after { width: 15px; height: 15px; position: absolute; left: -35px; top: -5px; display: inline; content: '01'; color: white; } 
             &:nth-last-of-type(1)::after { width: 15px; height: 15px; right: -35px; top: -5px; display: inline; content: '03'; color: white; position: absolute; } 
           } 
@@ -36,18 +35,20 @@
   } 
   
 }
-      
-.mainPage{
+
+@media (width > 640px) {
+
+  .mainPage{
     /* matchSlide */
     .matchArea{
-        .leagueAndMatch { width: 100%; gap: 2.08%; display: flex; align-items: flex-start; justify-content: flex-start; position: relative; 
-                > .league-table { box-sizing: border-box; width: 31.90%; aspect-ratio: 460/469; background-color: #282828; border-radius: 20px; border: 5px inset rgba(252, 252, 253, 0.719); padding-block: 50px; padding-inline: 40px; display: flex; align-items: center; 
-              &:hover { animation: slideBound 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1 backwards; } 
-              > table { width: 100%; text-align: center; line-height: 45px; 
-                > caption { font-size: 24px; font-weight: 600; text-align: left; margin-bottom: 30px; padding-left: 20px; } 
-                > * > tr { color: var(--color--gray); font-size: 16px; font-weight: 500; } 
-                > tbody {
-                    > tr{
+      .leagueAndMatch { width: 100%; gap: 2.08%; display: flex; align-items: flex-start; justify-content: flex-start; position: relative; 
+        > .league-table { box-sizing: border-box; width: 31.90%; aspect-ratio: 460/469; background-color: #161616; border-radius: 20px; border: 5px inset rgba(252, 252, 253, 0.719); padding-block: 50px; padding-inline: 40px; display: flex; align-items: center; 
+          &:hover { animation: slideBound 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1 backwards; } 
+          > table { width: 100%; text-align: center; line-height: 45px; 
+            > caption { font-size: 24px; font-weight: 600; text-align: left; margin-bottom: 30px; padding-left: 20px; } 
+            > * > tr { color: var(--color--gray); font-size: 16px; font-weight: 500; } 
+            > tbody {
+              > tr{
                         > *:nth-last-child(1) { color: var(--color--white); } 
                         &:nth-last-of-type(1) { border: 3px solid var(--color--blue); } 
                         &:nth-of-type(1) > td:nth-of-type(2)::before { content: url(../../public/images/main/leagueTable_jeju.icon.png); } 
@@ -56,48 +57,46 @@
                         &:nth-of-type(4) > td:nth-of-type(2)::before { content: url(../../public/images/main/leagueTable_daegu.icon.png); } 
                         &:nth-of-type(5) > td:nth-of-type(2)::before { content: url(../../public/images/main/leagueTable_incheon.icon.png); } 
                         td:nth-of-type(2) { position: relative; width: 45px; text-align: right; 
-                            &::before { content: url(../../public/images/main/leagueTable_junbuk.icon.png); margin-right: 5px; position: absolute; transform: translate(-50%, -50%); left: 0%; top: 55%; } 
+                          &::before { content: url(../../public/images/main/leagueTable_junbuk.icon.png); margin-right: 5px; position: absolute; transform: translate(-50%, -50%); left: 0%; top: 55%; } 
                         } 
-                    } 
+                      } 
+                    }
+                  } 
+                } 
+              }
+              .slide-container { max-width: 950px; width: 65.88%; display: flex;  overflow-x: scroll; scroll-behavior: smooth;
+                .slide-track{width: 150%;  display: flex; transition-duration: 2s; gap: 3%; margin-bottom: 30px;
+                  .slide {flex-shrink: 0; flex-basis: 48.5%; aspect-ratio: 460/469; text-align: center; box-sizing: border-box; background-color: #161616; cursor: pointer; border-radius: 20px;}
                 }
-              } 
-            } 
-        }
-        .slide-container { max-width: 950px; width: 65.88%; display: flex;  overflow-x: scroll; scroll-behavior: smooth;
-            .slide-track{width: 150%;  display: flex; transition-duration: 2s; gap: 3%; margin-bottom: 30px;
-              .slide {flex-shrink: 0; flex-basis: 48.5%; aspect-ratio: 460/469; text-align: center; box-sizing: border-box; background-color: #282828; cursor: pointer; border-radius: 20px;}
+              }
+              .slide-container::-webkit-scrollbar{height: 10px;}
+              .slide-container::-webkit-scrollbar-track{background-color: #484848;border-radius: 5px;}
+              .slide-container::-webkit-scrollbar-thumb{background-color:#8f8f8f ; border-radius: 5px; width: 50px;}
             }
-          }
-          .slide-container::-webkit-scrollbar{height: 10px;}
-          .slide-container::-webkit-scrollbar-track{background-color: #484848;border-radius: 5px;}
-          .slide-container::-webkit-scrollbar-thumb{background-color:#8f8f8f ; border-radius: 5px; width: 50px;}
+            
+            /* feedSlide */
+        .feedArea { padding-inline: 30px;
+          > .tap-container { width: 100%; margin-bottom: 48px; display: flex; justify-content: flex-start; align-items: center; gap: 3%;  flex-wrap: wrap;
+            > .tap-item { font-size: 18px; font-weight: 400; cursor: pointer; 
+              &.active { color: var(--color--blue); } 
+            } 
+          } 
+          > .feedSlide-container { position: relative; width: 100%; 
+            > button { width: 30px; height: 30px; background-position: center; background-repeat: no-repeat; border-radius: 100%; position: absolute; z-index: 100; cursor: pointer; transform: translate(-50%,-50%); } 
+            /* custom Arrow */
+            > .btn-next { background: url(../../public/images/main/_.png) no-repeat center / cover; top: 35%; right: -2%} 
+            > .btn-prev { background: url(../../public/images/main/_-1.png) no-repeat center / cover; top: 35%; ;} 
+            .slide-item > div { margin: 0 10px; padding: 0; border-radius: 20px; box-sizing: border-box; display: flex; flex-direction: column; 
+              img { display: block; width: 100%; margin-bottom: 26px; border-radius: 20px 20px 0 0; background-color: #161616; } 
+              p { width: 100%; font-size: 18px; line-height: 25px; max-width: 340px; font-weight: 400; display: inline-block; } 
+              strong { margin-right: 5px; text-transform: capitalize; display: inline; color: #ffea00; } 
+            } 
+          } 
         }
-        
-        /* feedSlide */
-    .feedArea { 
-        > .tap-container { width: 62.69%; margin-bottom: 48px; display: flex; justify-content: flex-start; align-items: center; gap: 7.74%; 
-          > .tap-item { font-size: 18px; font-weight: 400; cursor: pointer; 
-            &.active { color: var(--color--blue); } 
-        } 
-    } 
-        > .feedSlide-container { position: relative; 
-          > button { width: 30px; height: 30px; background-position: center; background-repeat: no-repeat; border-radius: 100%; position: absolute; transform: translate(-50%, 400%); z-index: 9999; cursor: pointer; } 
-          /* custom Arrow */
-          > .btn-next { background: url(../../public/images/main/_.png) no-repeat center / cover; right: -20px; } 
-          > .btn-prev { background: url(../../public/images/main/_-1.png) no-repeat center / cover; left: -10px; } 
-          /* default Arrow Cancle */
-          .slick-arrow, .slick-arrow::before { z-index: -9999; display: none; } 
-          .slide-item > div { margin: 0; padding: 0; width: 338px; aspect-ratio: 338/380; border-radius: 20px; box-sizing: border-box; display: flex; flex-direction: column; 
-            img { width: 100%; aspect-ratio: 338/250; margin-bottom: 26px; border-radius: 20px 20px 0 0; background-color: #161616; } 
-            p { font-size: 18px; line-height: 25px; max-width: 340px; font-weight: 400; } 
-            strong { margin-right: 5px; text-transform: capitalize; display: inline; color: #ffea00; } 
-        } 
-    } 
+    }
 }
-
-}
-
-/* league ranking table animation */
+      
+      /* league ranking table animation */
 @keyframes slideBound{
   0% { -webkit-transform: translateY(0); transform: translateY(0);}
   25% { -webkit-transform: translateY(-50px); transform: translateY(-50px);}
