--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,7 @@
 
 /* Header */
 @media ( width > 640px)  {
-    header{font-size: 18px; background-color: rgba(0, 0,0, var(--header--opacity)); padding-top:35px; padding-bottom:15px ; width:100%; color:var(--color--white); position:fixed;  z-index: 100;
+    header{ font-size: 18px; background-color: rgba(0, 0,0, var(--header--opacity)); padding-top:35px; padding-bottom:15px ;color:var(--color--white); position:sticky;  z-index: 100; width: 100%; top: 0;
         &:hover{background-color: var(--color--black);}
         > div{display:flex; align-items:center;
             > h1 {width:20.53% ; margin-right:2.43%;
@@ -9,7 +9,7 @@
                     > img{width:100%;}
                 }
              }
-             > nav {width:50.23%; box-sizing:border-box; margin-right: 10%;
+             > nav {width:50.23%; box-sizing:border-box;
                      > ul{display:flex; align-items:flex-start; justify-content:space-between; position:relative;
                          > li{line-height: 22px; 
                              &:hover{color: var(--color--blue2); font-weight: 700; text-decoration: underline; text-decoration-thickness: 3px; text-underline-offset: 5px;}
@@ -21,8 +21,7 @@
                         }
                 &:hover::after{height: 120px; width:100%; content:''; display:block; position:absolute; background-color:rgba(14, 13, 13, 0.8);top: 128px; left: 0;}
              }
-             > div{ width: 20%; font-size: 16px; color: var(--color--gray); font-weight: 300;
-                 > a:nth-of-type(2) { padding-inline: 20px;}
+             > div{ font-size: 16px; color: var(--color--gray); font-weight: 300; margin-left: auto; gap: 20px; display: flex;
              }
         }   
     }
@@ -32,20 +31,25 @@
     0% {width: 0px;}
     100% {width: 70%;}
 }
+@keyframes hamburgerMenuLogin {
+    0% {right: 0; color: transparent; }
+    100% {right: 10%; color: white;}
+}
 
 @media ( width <= 640px){
-
-    header{font-size: 14px; background-color: rgba(0, 0,0, var(--header--opacity)); padding-bottom:15px ; width:100%; color:var(--color--white); position:fixed;  z-index: 100;
-        > div {flex-direction: column; flex-wrap: wrap; display: flex;
-            > h1 {
-                a  > img {display: block; }
+    header{font-size: 14px; background-color: rgba(0, 0,0, var(--header--opacity)); padding-bottom:15px ; width:100%; color:var(--color--white); position:sticky; top: 0;  z-index: 100; padding-top:35px;
+        > div {display: flex; width: 100%; 
+            > h1 { 
+                a  {
+                    > img {display: block; }
+                } 
             }
-            nav { width: 34px; height: 26px; display: inline-block; background: url(../../public/images/main/hamburgerMenu.png) no-repeat center / auto; position: absolute; right: 3%; top: 50%; transform: translate(-50%,-50%); cursor: pointer; z-index: 200;
+            nav { width: 34px; height: 26px; display: inline-block; background: url(../../public/images/main/hamburgerMenu.png) no-repeat center / auto; position: absolute; right: 0; top: 75px; transform: translate(-50%,-50%); cursor: pointer; z-index: 200; 
                 > * {display: none;}
-                &.active {animation: hamburgerMenu; animation-fill-mode: forwards; animation-duration: 1.5s;  height: 200vh; position: absolute; transform: translate(0,0); top: 0; right: 0; background-color:#353232cb;
+                &.active {width: 70vw; animation: hamburgerMenu; animation-fill-mode: forwards; animation-duration: 1.5s;  height: 200vh; position: absolute; transform: translate(0,0); top: 0; background-color:#353232cb;
                     > * {display: block; }
-                    > ul { padding-top: 30px; width: 100%; padding-inline: 5%;
-                        > li { line-height: 30px; overflow: hidden; height: 30px; font-size: 14px; font-weight: 600;
+                    > ul { padding-top: 60px; padding-inline: 7%;
+                        > li { line-height: 30px; overflow: hidden; height: 30px; font-size: 14px; font-weight: 600; width: 50%;
                             &.active{height: auto; 
                                 > ul { font-size: 10px; font-weight: 400;
                                     > li:nth-last-of-type(1) { border-bottom: 2px solid linen};
@@ -57,9 +61,13 @@
                         }
                     }
                  }
+                }
+                > div {display: none;
+                    &.active {width: auto; animation-fill-mode: forwards; animation-name: hamburgerMenuLogin; animation-duration: 2.5s; display: block; position:absolute;z-index: 300; display: flex; gap: 5vw; top: 30px; justify-content: flex-end;}                    
+                }
             }
-        }
     }
+
 }
 
 
@@ -81,37 +89,78 @@
 
 /* Footer */
 
-footer{
-     > div:nth-of-type(1) {background-color: var(--color--blodGray);
-         > div {padding-block: 50px; font-size: 16px;
-             > h2 {margin-bottom: 50px;
-                > img {height: 100px;}
-            }
-             > ul {display: flex; justify-content: space-between;
-                 > li{line-height: 32px;text-indent: 33px; color: #999999;border-left: 1px solid var(--color--gray);
-                     > ol {color: var(--color--white);}
+@media (width > 640){
+
+    footer{
+        > div:nth-of-type(1) {background-color: var(--color--blodGray);
+             > div {padding-block: 50px; font-size: 16px;
+                > h2 {margin-bottom: 50px;
+                    > img {height: 100px;}
                 }
+                > ul {display: flex; justify-content: space-between;
+                    > li{line-height: 32px;text-indent: 33px; color: #999999;border-left: 1px solid var(--color--gray);
+                         > ol {color: var(--color--white);}
+                        }
+                    }
+                }
+        }
+        > div:nth-of-type(2) {padding-block: 50px; font-weight: 300; color: #bbbbbb;display: flex; flex-wrap: wrap; justify-content: space-between;
+                > address {width: 41.7%;line-height: 25px; font-style: normal;
+                 > button {padding: 5px;border-radius: 5px;background-color: #161616;cursor: pointer;}
+                }
+                > div {width: 20%; padding-top: 45px;
+                    > p {text-align: right; margin-bottom: 30px;color: #999999;}
+                    > ul {display: flex; justify-content: space-between; align-items: center;
+                        > li {width: 43px;aspect-ratio: 1 /1; border: 1px solid #979797; border-radius: 100%;
+                            &:nth-child(1) {background: url(../../public/images/main/footer_sns_01.png) no-repeat center / auto;}
+                            &:nth-child(2) {background: url(../../public/images/main/footer_sns_02.png) no-repeat center / auto;}
+                       &:nth-child(3) {background: url(../../public/images/main/footer_sns_03.png) no-repeat center / auto;}
+                       &:nth-child(4) {background: url(../../public/images/main/footer_sns_04.png) no-repeat center / auto;}
+                       &:nth-child(5) {background: url(../../public/images/main/footer_sns_05.png) no-repeat center / auto;}
+                       > a {width: 100%; height:100%; text-indent: -9999px; display: block;}
+                    }
+                }
+                &:nth-of-type(2) {font-size: 16px; flex-basis: 100% ;gap: 35px; display: flex;}
+                &:nth-of-type(2) a:hover {font-weight: 600; color: var(--color--blue);}
             }
         }
     }
-     > div:nth-of-type(2) {padding-block: 50px; font-weight: 300; color: #bbbbbb;display: flex; flex-wrap: wrap; justify-content: space-between;
-         > address {width: 41.7%;line-height: 25px; font-style: normal;
-             > button {padding: 5px;border-radius: 5px;background-color: #161616;cursor: pointer;}
-        }
-         > div {width: 20%; padding-top: 45px;
-             > p {text-align: right; margin-bottom: 30px;color: #999999;}
-             > ul {display: flex; justify-content: space-between; align-items: center;
-                 > li {width: 43px;aspect-ratio: 1 /1; border: 1px solid #979797; border-radius: 100%;
-                   &:nth-child(1) {background: url(../../public/images/main/footer_sns_01.png) no-repeat center / auto;}
-                   &:nth-child(2) {background: url(../../public/images/main/footer_sns_02.png) no-repeat center / auto;}
-                   &:nth-child(3) {background: url(../../public/images/main/footer_sns_03.png) no-repeat center / auto;}
-                   &:nth-child(4) {background: url(../../public/images/main/footer_sns_04.png) no-repeat center / auto;}
-                   &:nth-child(5) {background: url(../../public/images/main/footer_sns_05.png) no-repeat center / auto;}
-                   > a {width: 100%; height:100%; text-indent: -9999px; display: block;}
+}
+
+@media (width <= 640){
+
+    footer{
+        > div:nth-of-type(1) {background-color: var(--color--blodGray);
+             > div {padding-block: 50px; font-size: 16px;
+                > h2 {margin-bottom: 50px;
+                    > img {height: 100px;}
                 }
+                > ul {display: flex; justify-content: space-between;
+                    > li{line-height: 32px;text-indent: 33px; color: #999999;border-left: 1px solid var(--color--gray);
+                         > ol {color: var(--color--white);}
+                        }
+                    }
+                }
+        }
+        > div:nth-of-type(2) {padding-block: 50px; font-weight: 300; color: #bbbbbb;display: flex; flex-wrap: wrap; justify-content: space-between;
+                > address {width: 41.7%;line-height: 25px; font-style: normal;
+                 > button {padding: 5px;border-radius: 5px;background-color: #161616;cursor: pointer;}
+                }
+                > div {width: 20%; padding-top: 45px;
+                    > p {text-align: right; margin-bottom: 30px;color: #999999;}
+                    > ul {display: flex; justify-content: space-between; align-items: center;
+                        > li {width: 43px;aspect-ratio: 1 /1; border: 1px solid #979797; border-radius: 100%;
+                            &:nth-child(1) {background: url(../../public/images/main/footer_sns_01.png) no-repeat center / auto;}
+                            &:nth-child(2) {background: url(../../public/images/main/footer_sns_02.png) no-repeat center / auto;}
+                       &:nth-child(3) {background: url(../../public/images/main/footer_sns_03.png) no-repeat center / auto;}
+                       &:nth-child(4) {background: url(../../public/images/main/footer_sns_04.png) no-repeat center / auto;}
+                       &:nth-child(5) {background: url(../../public/images/main/footer_sns_05.png) no-repeat center / auto;}
+                       > a {width: 100%; height:100%; text-indent: -9999px; display: block;}
+                    }
+                }
+                &:nth-of-type(2) {font-size: 16px; flex-basis: 100% ;gap: 35px; display: flex;}
+                &:nth-of-type(2) a:hover {font-weight: 600; color: var(--color--blue);}
             }
-            &:nth-of-type(2) {font-size: 16px; flex-basis: 100% ;gap: 35px; display: flex;}
-            &:nth-of-type(2) a:hover {font-weight: 600; color: var(--color--blue);}
         }
     }
 }
