--- a/src/css/page.css
+++ b/src/css/page.css
@@ -1,18 +1,19 @@
 /* mainPage */
+@media (width > 640px) {
 
-.mainPage{
+  .mainPage{  
 
-  /* League & Match  */
-  .matchArea { margin-bottom: 150px; color: var(--color--white); 
-    > h2 { position: relative; display: flex; align-items: center; justify-content: center; margin-bottom: 70px; height: 50px; 
-      > span { z-index: 0; padding-inline: 50px; background-color: var(--color--black); } 
-      &::before { width: 100%; height: 1px; left: 0; top: 50%; transform: translate(0%, -50%); background-color: var(--color--white); content: ''; position: absolute; z-index: 0; } 
+    /* League & Match  */
+    .matchArea { color: var(--color--white); 
+      > h2 { position: relative; display: flex; align-items: center; justify-content: center; margin-bottom: 70px; height: 50px; 
+        > span { z-index: 0; padding-inline: 50px; background-color: var(--color--black); } 
+        &::before { width: 100%; height: 1px; left: 0; top: 50%; transform: translate(0%, -50%); background-color: var(--color--white); content: ''; position: absolute; z-index: 0; } 
     } 
   }
   
   /* Market */
-  .marketArea { color: var(--color--white); margin-bottom: 148px; 
-    h2 { margin-bottom: 50px; text-align: center; } 
+  .marketArea { color: var(--color--white);
+    h2 { text-align: center; } 
     > a { max-width: 250px; font-size: 18px; line-height: 55px; padding-left: 40px; margin-inline: auto; margin-bottom: 70px; display: block; position: relative; box-sizing: border-box; border: 1px solid var(--color--white); border-radius: 30px; } 
     > ul { width: 100%; display: grid; gap: 30px; grid-template-columns: repeat(3, 1fr); grid-template-rows: repeat(2,1fr); 
       > li:hover { border: 5px solid var(--color--blue); } 
@@ -25,13 +26,11 @@
       } 
     } 
   }
-
-/* Feed */
-  .feedArea { margin-bottom: 145px; color: var(--color--white); 
-    > h2 { margin-bottom: 50px; } 
-  }
-
-/* Gallery */
+  
+  /* Feed */
+  .feedArea {color: var(--color--white);}
+  
+  /* Gallery */
   .galleryArea { 
     > h2 {  height: 1px;  text-indent: -9999px;} 
     > ul {  width: 100%;  margin-bottom: 145px;  display: grid;  grid-template-columns: 1fr 1fr;  grid-template-rows: 430px 675px;  grid-gap: 70px 2.78%;  text-align: center; 
@@ -46,11 +45,11 @@
       } 
     } 
   }
-
+  
   /* Academy  */
   .academyArea { 
     background: url(../../public/images/main/academy.BackGround_Img.png) no-repeat center / auto;  
-    > div { margin-bottom: 150px;  position: relative;  
+    > div {  position: relative;  
       > h2 { line-height: 60px;  display: inline; 
         &::after { content: ""; display: inline-block; width: 52.31%; height: 18px; margin-inline: 4.63%; border-top: 1px solid var(--color--white);} 
       }     
@@ -61,12 +60,10 @@
       } 
     } 
   }
-
+  
   /* Event */
   .eventArea { 
-    margin-bottom: 150px; 
-    > h2 { margin-bottom: 50px; } 
-    > ul { width: 100%; padding-inline: 50px; display: grid; grid-template-columns: 44.44% 44.44%; grid-auto-rows: 330px 130px 70px 260px 200px; gap: 0px 4.85%; 
+    > ul { padding-inline: 50px; display: grid; grid-template-columns: 44.44% 44.44%; grid-auto-rows: 330px 130px 70px 260px 200px; gap: 0px 4.85%; 
       > li { border-radius: 20px; background-color: var(--color--blodGray); 
         &:nth-of-type(1) { grid-column: 2/3; grid-row: 1/3; } 
         &:nth-of-type(2) { grid-column: 1/2; grid-row: 2/5; } 
@@ -81,7 +78,7 @@
       } 
     } 
   }
-
+  
   /* Youth */
   .youthArea { 
     padding-top: 300px; padding-bottom: 148px; background: url(../../public/images/main/iufcYouthBackGround_img.png) no-repeat bottom / cover; text-align: center; 
@@ -90,14 +87,14 @@
     > p { font-size: 18px; line-height: 30px; margin-bottom: 44px; } 
     > a { font-size: 20px; max-width: 480px; line-height: 80px; border-radius: 15px; display: block; position: relative; background-color: #4040408f; margin-inline: auto; } 
   }
-
+  
   /* Sponsor */
   .sponsorArea { 
     margin-block: 150px; color: var(--color--white); text-align: center; 
     > * { margin-inline: auto; } 
     a { display: block; 
       &:nth-of-type(1) { max-width: 168px; border: 1px solid var(--color--white); padding-inline: 44px; padding-block: 17px; border-radius: 100px; font-size: 18px; font-weight: 500; box-sizing: border-box; margin-bottom: 48px; } 
-      &:not(:nth-of-type(1)) { box-sizing: border-box; border: 1px solid var(--color--white); max-width: 480px; line-height: 67px; border-radius: 5px; } 
+      &:not(:nth-of-type(1)) { box-sizing: border-box; border: 1px solid var(--color--white); max-width: 480px; line-height: 67px; border-radius: 10px; } 
       &:nth-of-type(2) { margin-bottom: 25px; } 
       &:hover:not(:nth-of-type(1)) { background-color: var(--color--blue); border: 1px solid var(--color--blue); } 
     } 
@@ -112,9 +109,10 @@
       } 
     } 
   }
-
+  
 }
 
+}
 
 /* Sub page start ! */
 
