--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -78,18 +78,27 @@ body{ color: var(--color--white);}
 * { font-family:"Roboto","SUIT-Regular"; font-size: inherit; letter-spacing:0.0001px;}
 
 
-.size1442{ max-width: 1442px; margin-inline: auto;}
+.size1442{ max-width: 1442px; margin-inline: auto;} 
 .size1080{ max-width: 1080px; margin-inline: auto;}
 .size1560{ max-width: 1560px; margin-inline: auto; }
-[class^='hStyle']{ font-weight: 900; font-size: 50px;}
+@media (width > 640px){
+  [class^='hStyle']{ font-weight: 900; font-size: 50px; }
+}
+@media (width <= 640px){
+  [class^='hStyle']{ font-weight: 900; font-size: 30px; }
+}
 
 [class$='Italic']{ font-style: italic;}
 
 .a-before::before{ content: ""; background-color: var(--color--blodGray); width: 30px; height: 30px; border-radius: 100%; background-image: url(../../public/images/main/link_icon_02.png); background-repeat: no-repeat; background-size: auto; background-position: center; transform: translate(-50%,-50%); position: absolute; left:8%; top: 50%;}
 
-.a-after::after{ display: inline; content: ""; width: 25px; aspect-ratio: 1/1; background: url(../../public/images/main/link_icon_01.png) no-repeat center / auto; background-color: white; border-radius: 100%; position: absolute; transform: translate(-50%,-50%); top: 50%; right: 5%;}
+.a-after::after{ display: inline; content: ""; width: 25px; aspect-ratio: 1/1; background: url(../../public/images/main/link_icon_01.png) no-repeat center / auto; background-color: white; border-radius: 100%; position: absolute; transform: translate(-50%,-50%); top: 50%; right: 0;}
 
 .bg-color-blue {display:inline-block; background-color:var(--color--blue); color: var(--color--white); padding-inline:20px; border-radius:30px; font-size:18px; font-weight:600; }
 
 .hiddenH2 {font-size: 0.1px; text-indent: -9999px;}
 
+.mainPage {
+  h2 {margin-bottom: 50px;}
+  section { margin-bottom: 150px;}
+}
