--- a/src/css/global.css
+++ b/src/css/global.css
@@ -128,7 +128,7 @@
 
 @media (width <= 640px){
 
-    footer{padding-inline: 30px;
+    footer{padding-inline: 30px; border-top: 1px solid var(--color--gray);
         > div:nth-of-type(1) {display: none;}
         > div:nth-of-type(2) {padding-block: 50px; font-weight: 300; color: #bbbbbb;display:flex; font-size: 16px; flex-wrap: wrap;
             > * {width: 100%;}
