--- a/src/css/page.css
+++ b/src/css/page.css
@@ -118,10 +118,12 @@
 
 /* Club */
 
-.clubPage {
-  /* Introduction */
-  .introductionArea{
-    > img { display: block;}
+@media (width > 640px){
+  
+  .clubPage {
+    /* Introduction */
+    .introductionArea{
+      > img { display: block;}
   };
 
   /* Vision */
@@ -167,7 +169,7 @@
       }
     } 
   }
-
+  
   /* Organization */
   .organizationArea {
     > mark.bg-color-blue {  line-height:33px; margin-bottom:35px;}
@@ -184,7 +186,7 @@
       &:nth-of-type(1){margin-bottom: 70px;}
     }
   } 
-
+  
   /* Emblem */
   .emblemArea {color: var(--color--white); width: 100%;
     > figure { width:100%; display:flex; justify-content:space-between; align-items:flex-start; flex-wrap: wrap;
@@ -200,12 +202,12 @@
       }
       button { padding-inline:20px 50px; line-height:54px; font-size:18px; box-sizing:border-box; border:1px solid white; border-radius:10px; position:relative; cursor: pointer;
         &::after {width:18px; height:16px; right: 2.5%; top:50%; transform:translate(-50% , -50%); background-image:url('../../public/images/club/downloadicon01.png'); content:''; position:absolute; display:inline;}
-  }
-  }
-
-  /* History */
-  .historyArea{
-    > h2 { font-size: 70px; font-weight: 600; margin-bottom: 70px;
+      }
+    }
+    
+    /* History */
+    .historyArea{
+      > h2 { font-size: 70px; font-weight: 600; margin-bottom: 70px;
       > span { color: var(--color--blue);}
     }
     > img {display: block;}
@@ -222,7 +224,7 @@
         }
       }
     }
-
+    
     /* Greeting */
     .greetingArea{
       > h2 {margin-bottom: 150px; font-size: 60px; }
@@ -234,9 +236,9 @@
           > span{font-size: 24px; margin-bottom: 32px; display: block;  color: var(--color--gray); font-weight: 600;}} 
           > button { line-height: 56px; font-size: 18px ; padding-inline: 45px ; box-sizing: border-box; border: 1px solid var(--color--white); border-radius: 5px;cursor: pointer; color: #bbbbbb;
             &::after{width:21px; height: 11px; margin-left: 15px; content: ''; display: inline-block; background: url('../../public/images/club/arrow-1.png') no-repeat center / cover; }
-          &.active::after{background-image: url('../../public/images/club/arrow.png');}
+            &.active::after{background-image: url('../../public/images/club/arrow.png');}
+          }
         }
-      }
     }
     > div {
       &.active{display: none;}
@@ -315,7 +317,7 @@
         }
         > div {
           font-size: 18px; display: flex; align-items: center; justify-content: space-between; padding-inline: 50px; padding-block: 30px; border: 1px solid var(--color--gray); box-sizing: border-box;
-      > ul > li {
+          > ul > li {
         display: flex;
         &:not(:last-of-type) { margin-bottom: 20px; }
         &::before { content: url('../../public/images/club/parking_bus.png'); display: inline-block; margin-right: 15px; }
@@ -330,9 +332,9 @@
       }
 
 
+  }  
 }
-
-
+    
 /* player */
 @media (width > 640px){
 
